[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
description = "A solver for the math puzzles on the countdown game show."
edition = "2021"
keywords = ["countdown", "solver"]
name = "countdown-math-solver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.9", features = ["derive", "unicode"]}
# itertools = "0.10.3"
strum = {version = "0.23.0", features = ["derive"]}
